--- a/application/package.json
+++ b/application/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "auth0-js": "^9.0.0",
     "bootstrap": "^3.3.7",
+    "idtoken-verifier": "^1.2.0",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
