--- a/application/package.json
+++ b/application/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "@types/react": "^16.4.18",
     "auth0-js": "^9.0.0",
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
